8582. Fixed bug on popupmenu showing behind app menu on mobile

--- a/src/components/popupmenu/_popupmenu.scss
+++ b/src/components/popupmenu/_popupmenu.scss
@@ -69,7 +69,7 @@
   left: -9999px;
   position: fixed;
   -webkit-touch-callout: none;
-  z-index: 4000;
+  z-index: 7002;
 
   .arrow,
   .arrow::after {
